# jelatofish

./: .gitignore  Cargo.toml  Makefile.toml  README.md  xstarfish_1.1+ds.orig.tar.xz
src/: game.rs  generators.rs  lib.rs  main.rs  types.rs
src/generators/: bubble.rs  coswave.rs  flatwave.rs  mod.rs  rangefrac.rs  spinflake.rs  test.rs
web/html/: index.html
